# mesher

./: .gitignore  CMakeLists.txt  README.md
model/: 1_handle.op  1_ring.op  5_handle.op  5_ring.op  cube.euler  cube.op
src/: main.cpp
src/core/: .Mesher.cpp.swp  Mesher.cpp  Mesher.hpp
src/mesher/: mesher.cpp
src/shader/: fragment.glsl  vertex.glsl
src/utility/: Camera.cpp  Model.cpp  Model.hpp  OGL.cpp  OGL.hpp  Texture.cpp  Texture.hpp  Video.cpp  Video.hpp  raw2mp4.sh
